--- a/take/css/style.css
+++ b/take/css/style.css
@@ -5,7 +5,7 @@
 .clearfix:after{
 	clear:both;
 }
-/*Задаем параметры стандартных элементов */
+/*Задаем параметры стандартных элементов---------------- */
 body {
 	width: 1800px;
 	margin: 0 auto;
@@ -34,7 +34,7 @@ a {
 	text-decoration: none;
 	color: white;
 }
-/*Задаем основные параметры основных блоков*/
+/*Задаем основные параметры основных блоков---------------------------*/
 .leftBlock {
 	width: 315px;
 	height: inherit;
@@ -54,7 +54,7 @@ a {
 	
 }
 
-/*шапка сайта*/
+/*шапка сайта--------------------------------------*/
 header {
 	color: white;
 	height: 951px;
@@ -74,7 +74,7 @@ header {
 	top: 260px;
 }
 
-/*блок START*/
+/*блок START--------------------------------------*/
 .start {
 	height: 540px;
 
@@ -95,7 +95,7 @@ header {
 	margin-top: 240px ;
 }
 
-/*ARTICLES блок*/
+/*ARTICLES блок------------------------------------*/
 .articles {
 	height: 540px;
 
@@ -149,7 +149,7 @@ header {
 	background-image: url(img/Layer14.jpg);
 }
 
-/*DETAILS блок*/
+/*DETAILS блок-------------------------------------*/
 .details {
 	height: 525px;
 }
@@ -167,7 +167,7 @@ header {
 }
 
 
-/*BIGIMAGE*/
+/*BIGIMAGE-----------------------------------------------*/
 .bigImg {
 	height: 873px;
 	background-image: url(img/Layer4.jpg);
@@ -184,7 +184,7 @@ header {
 	margin-top: 38px;
 }
 
-/*REASONS блок*/
+/*REASONS блок------------------------------------------*/
 .reasons {
 	height: 536px;
 	background-color: #82ca9c;
@@ -203,7 +203,7 @@ header {
 	
 }
 
-/*BUYNOW*/
+/*BUYNOW----------------------------------------------*/
 .buyNow {
 	height: 628px;
 	background-color: #f6f7fa;
@@ -217,10 +217,10 @@ header {
 	padding: 45px 55px;
 }
 .buyNow > .centralBlock > section > p {
-	margin: 27px 0;
+	margin: 18px 0;
 }
 .buyNow > .centralBlock > section > h1 {
-	margin-top: 24px;
+	margin-top: 18px;
 }
 .active {
 	background-color: white;
@@ -262,7 +262,7 @@ background-color: #e1e1e1;
 	margin-right: 16px;
 }
 
-/*FOOTER*/
+/*FOOTER---------------------------------------------------*/
 footer {
 	height: 608px;
 	background-color: #192431;
@@ -327,7 +327,7 @@ form, input, button, img {
 	-o-transform: rotate(-90deg);
 	transform: rotate(-90deg);
 	letter-spacing: 2px;
-	color: #d1e3e9;
+	color: #e1e1e1;
 }
 header > .leftBlock > .tape {
 	margin-top: 510px;
